--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Brian Alley</h1>
         <p><em>Senior Software Engineering Manager @ <strong>Commercehub</strong> / Amateur Web Developer</em></p>
-        <p>I have 15+ years experience in Software Leadership and I'm interested in learning web development. I'm a husband, father, avid cornhold player and I can't stop telling god-awful jokes.</p>
+        <p>I have 15+ years experience in Software Leadership and I'm interested in learning web development. I'm a husband, father, avid cornhold player and I can't stop telling terrible jokes.</p>
       </td>
     </tr>
   </table>
