--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <td><img src="BrianAlley-modified.png" alt="Brian Alley Profile"></td>
       <td>
         <h1>Brian Alley</h1>
-        <p><em>Senior Software Engineering Manager @ <strong>Commercehub</strong> / Amateur Web Developer</em></p>
-        <p>I have 15+ years experience in Software Leadership and I'm interested in learning web development. I'm a husband, father, avid cornhold player and I can't stop telling terrible jokes.</p>
+        <p><em>Engineering Manager @ <strong>Commercehub</strong> / Amateur Web Developer</em></p>
+        <p>I have 15+ years experience in Software Leadership and I'm interested in learning web development. I'm a husband, father, avid cornhold player and I can't stop telling terrible jokes that make my wife and daughters cringe.🤓</p>
       </td>
     </tr>
   </table>
