--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
     </thead>
     <tbody>
       <tr>
-        <td>2020-Present</td>
-        <td>Senior Engineering Manager</td>
+        <td>2018-Present</td>
+        <td>Engineering Manager</td>
       </tr>
-      <td>2015-2020</td>
-      <td>Engineering Manager</td>
+      <tr>
+        <td>2015-2018</td>
+        <td>Technical Operations Manager</td>
+      </tr>
+      <tr>
+        <td>2009-2015</td>
+        <td>Site-Reliability Engineer</td>
+      </tr>
     </tbody>
   </table>
   <hr>
