--- a/contact-me.html
+++ b/contact-me.html
@@ -10,9 +10,9 @@
   <h1>My Contact Details</h1>
   <p>My Fictional Address</p>
   <p>Phone Number</p>
-  <p>Email: B.Alley@outlook.com</p>
+  <p>Email: Email@outlook.com</p>
   <hr>
-  <form class="" action="mailto:b.alley@outlook.com?subject=Feedback Bitch" method="post" enctype="text/plain">
+  <form class="" action="mailto:email@outlook.com?subject=Feedback" method="post" enctype="text/plain">
     <label for="">Your Name:</label>
     <input type="text" name="yourName" value=""><br />
     <label for="">Your Email:</label>
